--- a/view/create.html
+++ b/view/create.html
@@ -9,5 +9,11 @@
 <body>
   <h3>Publier un nouveau film</h3>
   
+<form action="">
+  <label for="title">Titre</label>
+  <input type="text" name="title" id="title">
+</form>
+
 </body>
 </html>
+
