--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@ header {
     min-height: 6vh;
     display: flex;
     align-items: center;
-    margin-bottom: 4rem;
+    z-index: 10;
     box-shadow: 4px 4px 7px 1px black;
 }
 
@@ -36,6 +36,7 @@ header {
 
 h1 {
     font-size: 4.5rem;
+    margin-left: 2rem;
     padding: 0.8rem;
 }
 
@@ -45,7 +46,7 @@ h1 {
 }
 
 .navbar-toggler-icon {
-  width: 3rem;
+    width: 3rem;
 }
 
 .custom-toggler.navbar-toggler:focus {
@@ -54,6 +55,7 @@ h1 {
 
 .header__nav {
     flex: 10;
+    margin-right: 2rem;
 }
 
 .navbar-nav .nav-item .nav-link {
@@ -71,10 +73,46 @@ h1 {
 
 /*  ============= BANNIERE ================ */
 
+.banniere {
+    background-image: url('../img/banniere.jpg');
+    background-position: center;
+    background-size: cover;
+    height: 30vw;
+    max-height: 50rem;
+    z-index: -50;
+    position: relative;
+}
+
 .slogan {
-    color: rgba(66, 173, 138, 0.993);
-    font-size: 2.5rem;
-    margin-bottom: 3rem;
+    color: rgb(26, 94, 71);
+    font-size: 1.7vmin;
+    font-weight: bold;
+    position: absolute;
+    top: 13%;
+    left: 51%;
+    transform: translate(-51%, -13%);
+}
+
+.label {
+    color: rgba(66, 173, 138, 1);
+    margin-left: 0;
+}
+
+.label_placeholder {
+    color: #000;
+}
+
+/* ======== CREATE ================ */
+
+
+
+.form-control:focus {
+    box-shadow: none;
+    border: 2px solid rgba(66, 173, 138, 1);
+}
+
+.textarea_placeholder {
+  color: #000;
 }
 
 /*  ============= MEDIA QUERY================ */
