--- a/styles/main.css
+++ b/styles/main.css
@@ -55,7 +55,7 @@ h1 {
 
 .header__nav {
     flex: 10;
-    margin-right: 2rem;
+    margin-right: 3rem;
 }
 
 .navbar-nav .nav-item .nav-link {
@@ -93,36 +93,37 @@ h1 {
     transform: translate(-51%, -13%);
 }
 
-.label {
-    color: rgba(66, 173, 138, 1);
-    margin-left: 0;
-}
+/* ============== CREATE ==================== */
 
 .label_placeholder {
-    color: #000;
+    color: rgb(255, 255, 255);
+    font-size: 1.5rem;
 }
 
-/* ======== CREATE ================ */
-
-
+.form-control {
+    background-color: rgba(66, 173, 138, 1);
+    border: none;
+}
 
 .form-control:focus {
+    background-color: rgba(66, 173, 138, 1);
+
     box-shadow: none;
-    border: 2px solid rgba(66, 173, 138, 1);
+    border: 4px solid rgba(66, 173, 138, 1);
 }
 
 .textarea_placeholder {
-  color: #000;
+    color: #000;
 }
 
 /*  ============= MEDIA QUERY================ */
+
 @media screen and (max-width: 991px) {
     /* effet barre sous nav */
     .navbar-nav .nav-item .nav-link {
         text-decoration: underline 0.15em rgba(66, 173, 138, 0);
         text-underline-offset: -1.5em;
     }
-
     .navbar-nav .nav-item .nav-link:hover {
         text-decoration: underline 0.15em rgba(66, 173, 138, 1);
     }
