--- a/view/header.html
+++ b/view/header.html
@@ -24,7 +24,7 @@
         <!--  ========================= HEADER ============================= -->
 
         <div class="header__nav d-flex justify-content-end">
-            <nav class="navbar navbar-expand-lg ">
+            <nav class="navbar navbar-expand-lg flex-row-reverse">
                 <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
