--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
   background-image: url("../img/banniere.jpg");
   background-position: center;
   background-size: cover;
-  height: 30vw;
+  height: 20vw;
   max-height: 50rem;
   z-index: -50;
   position: relative;
@@ -15,14 +15,31 @@
   font-size: 1.7vmin;
   font-weight: bold;
   position: absolute;
-  top: 13%;
+  top: 10%;
   left: 51%;
-  transform: translate(-51%, -13%);
+  transform: translate(-51%, -10%);
 }
 
 /*  ============= CARTE ================ */
 .card {
   background-color: rgb(54, 45, 59);
+  width: 30rem;
+}
+.card-img-top {
+  height: 30rem;
+}
+.card-title {
+  font-size: 3rem;
+  color: #ffffff;
+}
+.card-text {
+  font-size: 1.1rem;
+  color: #b3b3b3;
+  text-align: justify;
+}
+.card .btn {
+  float: right;
+  margin: -1rem 0.5rem 0.5rem 0.5rem;
 }
 
 /* ============== FORMULAIRE ==================== */
@@ -30,32 +47,29 @@
   width: 100%;
   max-width: 60rem;
 }
-
 .form-floating {
   color: #ffffff;
   font-weight: bold;
   font-size: 1.5vmin;
 }
-
 .form-control {
   background-color: rgb(54, 45, 59);
   border: none;
 }
-
 .form-control:focus {
   background-color: #6b5975;
   box-shadow: none;
   border: 1px solid gray;
 }
 
-.form-floating > .form-control:not(:placeholder-shown) {
+.form .form-floating > .form-control:not(:placeholder-shown) {
   color: #ffffff;
   font-weight: bold;
   font-size: 1.5vmin;
 }
 
 .btnPublish {
-  background-color: #ffffff;
+  background-color: rgb(201, 173, 167);
   color: #111016;
   font-size: 1.1rem;
   font-weight: bold;
