--- a/styles/_component.scss
+++ b/styles/_component.scss
@@ -25,6 +25,8 @@
 .card {
     background-color: $purpleCard;
     width: 30rem;
+    /* height: 54rem; */
+    margin: 3rem;
     &-img-top {
         height: 30rem;
     }
@@ -36,10 +38,11 @@
         font-size: 1.1rem;
         color: darken($white, 30%);
         text-align: justify;
+        height: 12rem;
     }
     .btn {
         float: right;
-        margin: -1rem 0.5rem 0.5rem 0.5rem;
+        margin: -0.5rem 0.5rem 0.5rem 0.5rem;
     }
 }
 
