--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,8 @@
 .card {
   background-color: rgb(54, 45, 59);
   width: 30rem;
+  /* height: 54rem; */
+  margin: 3rem;
 }
 .card-img-top {
   height: 30rem;
@@ -36,10 +38,11 @@
   font-size: 1.1rem;
   color: #b3b3b3;
   text-align: justify;
+  height: 12rem;
 }
 .card .btn {
   float: right;
-  margin: -1rem 0.5rem 0.5rem 0.5rem;
+  margin: -0.5rem 0.5rem 0.5rem 0.5rem;
 }
 
 /* ============== FORMULAIRE ==================== */
