--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -51,6 +51,8 @@ h1 {
     text-decoration: underline 0.15em rgba(201, 173, 167, 1);
 }
 
+/* ============== PAGE PUBLIER UN FILM============= */
+
 /* ....... titre publier ......... */
 
 .publishTitle {
