--- a/styles/_component.scss
+++ b/styles/_component.scss
@@ -1,3 +1,56 @@
+/*============== HEADER =================*/
+
+header {
+    background-color: $purpleBackground;
+    min-height: 10vh;
+    display: flex;
+    align-items: center;
+    z-index: 10;
+    box-shadow: 4px 4px 7px 1px black;
+}
+
+.header__title {
+    flex: 1;
+    color: $white;
+}
+
+h1 {
+    font-size: 4.5vmin;
+    margin-left: 2rem;
+    padding: 0.8rem;
+}
+
+/*  ======= personalise le btn hambuger ========= */
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(201, 173, 167)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-toggler-icon {
+    width: 3rem;
+}
+
+.custom-toggler.navbar-toggler:focus {
+    box-shadow: none;
+}
+
+.header__nav {
+    flex: 10;
+    margin-right: 3rem;
+}
+
+.navbar-nav .nav-item .nav-link {
+    color: $purpleText;
+    font-size: 1.6rem;
+    text-decoration: underline 0.15em rgba(201, 173, 167, 0);
+    text-underline-offset: 0.5em;
+    margin-right: 1rem;
+    transition: text-decoration-color 500ms;
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+    text-decoration: underline 0.15em rgba(201, 173, 167, 1);
+}
+
 /*  ============= BANNIERE ================ */
 
 .banniere {
@@ -28,17 +81,29 @@
     /* height: 54rem; */
     margin: 3rem;
     &-img-top {
-        height: 30rem;
+        height: 27rem;
     }
     &-title {
         font-size: 3rem;
         color: $white;
+    }
+    &-director {
+        font-size: 1.1rem;
+        color: darken($white, 30%);
+        margin-right: 1rem;
+
+
     }
     &-text {
         font-size: 1.1rem;
         color: darken($white, 30%);
         text-align: justify;
         height: 12rem;
+    }
+    &-date {
+        font-size: 1rem;
+        color: darken($white, 60%);
+        text-align: center;
     }
     .btn {
         float: right;
