--- a/styles/main.css
+++ b/styles/main.css
@@ -1,83 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Rammetto+One&family=Skranji&display=swap");
-/*  ============= BANNIERE ================ */
-.banniere {
-  background-image: url("../img/banniere.jpg");
-  background-position: center;
-  background-size: cover;
-  height: 20vw;
-  max-height: 50rem;
-  z-index: -50;
-  position: relative;
-}
-
-.slogan {
-  color: #111016;
-  font-size: 1.7vmin;
-  font-weight: bold;
-  position: absolute;
-  top: 10%;
-  left: 51%;
-  transform: translate(-51%, -10%);
-}
-
-/*  ============= CARTE ================ */
-.card {
-  background-color: rgb(54, 45, 59);
-  width: 30rem;
-  /* height: 54rem; */
-  margin: 3rem;
-}
-.card-img-top {
-  height: 30rem;
-}
-.card-title {
-  font-size: 3rem;
-  color: #ffffff;
-}
-.card-text {
-  font-size: 1.1rem;
-  color: #b3b3b3;
-  text-align: justify;
-  height: 12rem;
-}
-.card .btn {
-  float: right;
-  margin: -0.5rem 0.5rem 0.5rem 0.5rem;
-}
-
-/* ============== FORMULAIRE ==================== */
-.form {
-  width: 100%;
-  max-width: 60rem;
-}
-.form-floating {
-  color: #ffffff;
-  font-weight: bold;
-  font-size: 1.5vmin;
-}
-.form-control {
-  background-color: rgb(54, 45, 59);
-  border: none;
-}
-.form-control:focus {
-  background-color: #6b5975;
-  box-shadow: none;
-  border: 1px solid gray;
-}
-.form .form-floating > .form-control:not(:placeholder-shown) {
-  color: #ffffff;
-  font-weight: bold;
-  font-size: 1.5vmin;
-}
-
-.btnPublish {
-  background-color: rgb(201, 173, 167);
-  color: #111016;
-  font-size: 1.1rem;
-  font-weight: bold;
-  margin-left: 70%;
-}
-
 /*============== HEADER =================*/
 header {
   background-color: #111016;
@@ -130,6 +51,114 @@ h1 {
   text-decoration: underline 0.15em rgb(201, 173, 167);
 }
 
+/*  ============= BANNIERE ================ */
+.banniere {
+  background-image: url("../img/banniere.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 20vw;
+  max-height: 50rem;
+  z-index: -50;
+  position: relative;
+}
+
+.slogan {
+  color: #111016;
+  font-size: 1.7vmin;
+  font-weight: bold;
+  position: absolute;
+  top: 10%;
+  left: 51%;
+  transform: translate(-51%, -10%);
+}
+
+/*  ============= CARTE ================ */
+.card {
+  background-color: rgb(54, 45, 59);
+  width: 30rem;
+  /* height: 54rem; */
+  margin: 3rem;
+}
+.card-img-top {
+  height: 27rem;
+}
+.card-title {
+  font-size: 3rem;
+  color: #ffffff;
+}
+.card-director {
+  font-size: 1.1rem;
+  color: #b3b3b3;
+  margin-right: 1rem;
+}
+.card-text {
+  font-size: 1.1rem;
+  color: #b3b3b3;
+  text-align: justify;
+  height: 12rem;
+}
+.card-date {
+  font-size: 1rem;
+  color: #666666;
+  text-align: center;
+}
+.card .btn {
+  float: right;
+  margin: -0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+/* ============== FORMULAIRE ==================== */
+.form {
+  width: 100%;
+  max-width: 60rem;
+}
+.form-floating {
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 1.5vmin;
+}
+.form-control {
+  background-color: rgb(54, 45, 59);
+  border: none;
+}
+.form-control:focus {
+  background-color: #6b5975;
+  box-shadow: none;
+  border: 1px solid gray;
+}
+.form .form-floating > .form-control:not(:placeholder-shown) {
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 1.5vmin;
+}
+
+.btnPublish {
+  background-color: rgb(201, 173, 167);
+  color: #111016;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-left: 70%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* border: 1px solid red;  */
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  background-color: #111016;
+  color: rgb(201, 173, 167);
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  min-height: 100vh;
+}
+
 /* ============== PAGE PUBLIER UN FILM============= */
 /* ....... titre publier ......... */
 .publishTitle {
@@ -152,23 +181,5 @@ h1 {
   }
 }
 /* "sass": "sass --watch ./styles/:./styles/" */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  /* border: 1px solid red;  */
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  background-color: #111016;
-  color: rgb(201, 173, 167);
-  font-family: "Poppins", sans-serif;
-  text-align: center;
-  min-height: 100vh;
-}
 
 /*# sourceMappingURL=main.css.map */
