--- a/styles/_component.scss
+++ b/styles/_component.scss
@@ -1,151 +1,169 @@
 /*============== HEADER =================*/
 
 header {
-    background-color: $purpleBackground;
-    min-height: 10vh;
-    display: flex;
-    align-items: center;
-    z-index: 10;
-    box-shadow: 4px 4px 7px 1px black;
+  background-color: $purpleBackground;
+  min-height: 10vh;
+  display: flex;
+  align-items: center;
+  z-index: 10;
+  box-shadow: 4px 4px 7px 1px black;
 }
 
 .header__title {
-    flex: 1;
-    color: $white;
+  flex: 1;
+  color: $white;
 }
 
 h1 {
-    font-size: 4.5vmin;
-    margin-left: 2rem;
-    padding: 0.8rem;
+  font-size: 4.5vmin;
+  margin-left: 2rem;
+  padding: 0.8rem;
 }
 
 /*  ======= personalise le btn hambuger ========= */
 .custom-toggler .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(201, 173, 167)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(201, 173, 167)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 .navbar-toggler-icon {
-    width: 3rem;
+  width: 3rem;
 }
 
 .custom-toggler.navbar-toggler:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .header__nav {
-    flex: 10;
-    margin-right: 3rem;
+  flex: 10;
+  margin-right: 3rem;
 }
 
 .navbar-nav .nav-item .nav-link {
-    color: $purpleText;
-    font-size: 1.6rem;
-    text-decoration: underline 0.15em rgba(201, 173, 167, 0);
-    text-underline-offset: 0.5em;
-    margin-right: 1rem;
-    transition: text-decoration-color 500ms;
+  color: $purpleText;
+  font-size: 1.6rem;
+  text-decoration: underline 0.15em rgba(201, 173, 167, 0);
+  text-underline-offset: 0.5em;
+  margin-right: 1rem;
+  transition: text-decoration-color 500ms;
 }
 
 .navbar-nav .nav-item .nav-link:hover {
-    text-decoration: underline 0.15em rgba(201, 173, 167, 1);
+  text-decoration: underline 0.15em rgba(201, 173, 167, 1);
 }
 
 /*  ============= BANNIERE ================ */
 
 .banniere {
-    background-image: url('../img/banniere.jpg');
-    background-position: center;
-    background-size: cover;
-    height: 20vw;
-    max-height: 50rem;
-    z-index: -50;
-    position: relative;
+  background-image: url('../img/banniere.jpg');
+  background-position: center;
+  background-size: cover;
+  height: 20vw;
+  max-height: 50rem;
+  z-index: -50;
+  position: relative;
 }
 
 .slogan {
-    color: $purpleBackground;
-    font-size: 1.7vmin;
-    font-weight: bold;
-    position: absolute;
-    top: 10%;
-    left: 51%;
-    transform: translate(-51%, -10%);
+  color: $purpleBackground;
+  font-size: 1.7vmin;
+  font-weight: bold;
+  position: absolute;
+  top: 10%;
+  left: 51%;
+  transform: translate(-51%, -10%);
 }
 
 /*  ============= CARTE ================ */
 
 .card {
-    background-color: $purpleCard;
-    width: 30rem;
-    /* height: 54rem; */
-    margin: 3rem;
-    &-img-top {
-        height: 27rem;
-    }
-    &-title {
-        font-size: 3rem;
-        color: $white;
-    }
-    &-director {
-        font-size: 1.1rem;
-        color: darken($white, 30%);
-        margin-right: 1rem;
-
-
-    }
-    &-text {
-        font-size: 1.1rem;
-        color: darken($white, 30%);
-        text-align: justify;
-        height: 12rem;
-    }
-    &-date {
-        font-size: 1rem;
-        color: darken($white, 60%);
-        text-align: center;
-    }
-    .btn {
-        float: right;
-        margin: -0.5rem 0.5rem 0.5rem 0.5rem;
-    }
+  background-color: $purpleCard;
+  width: 30rem;
+  /* height: 54rem; */
+  margin: 3rem;
+  &-img-top {
+    height: 27rem;
+  }
+  &-title {
+    font-size: 3rem;
+    color: $white;
+  }
+  &-director {
+    font-size: 1.1rem;
+    color: darken($white, 30%);
+    margin-right: 1rem;
+  }
+  &-text {
+    font-size: 1.1rem;
+    color: darken($white, 30%);
+    text-align: justify;
+    height: 12rem;
+  }
+  &-date {
+    font-size: 1rem;
+    color: darken($white, 60%);
+    text-align: center;
+  }
+  .btn {
+    float: right;
+    margin: -0.5rem 0.5rem 0.5rem 0.5rem;
+  }
 }
 
 /* ============== FORMULAIRE ==================== */
 
 .form {
-    width: 100%;
-    max-width: 60rem;
-    &-floating {
-        color: $white;
-        font-weight: bold;
-        font-size: 1.5vmin;
+  width: 100%;
+  max-width: 60rem;
+  &-floating {
+    color: $white;
+    font-weight: bold;
+    font-size: 1.5vmin;
+  }
+  &-control {
+    background-color: $purpleCard;
+    border: none;
+  }
+  &-control:focus {
+    background-color: lighten($purpleCard, 20%);
+    box-shadow: none;
+    border: 1px solid darken($white, 50%);
+  }
+  .form-floating > .form-control:not(:placeholder-shown) {
+    color: $white;
+    font-weight: bold;
+    font-size: 1.5vmin;
+  }
+  
+  .form-floating > .form-control:focus {
+    color: $white;
+    font-weight: bold;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+  }
+  .form-floating > label {
+    top: -8px;
+
+    > i {
+        padding-left: 10px;
     }
-    &-control {
-        background-color: $purpleCard;
-        border: none;
-    }
-    &-control:focus {
-        background-color: lighten($purpleCard, 20%);
-        box-shadow: none;
-        border: 1px solid darken($white, 50%);
-    }
-    .form-floating > .form-control:not(:placeholder-shown) {
-        color: $white;
-        font-weight: bold;
-        font-size: 1.5vmin;
-    }
+
+
+  }
+
+  
 }
 
 .btnPublish {
-    background-color: $purpleText;
-    color: $purpleBackground;
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-left: 70%;
+  background-color: $purpleText;
+  color: $purpleBackground;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-left: 70%;
 }
 
 
-.up-movie {
-    color: aliceblue;
+
+.form-floating>.form-control-plaintext~label, .form-floating>.form-control:focus~label, .form-floating>.form-control:not(:placeholder-shown)~label, .form-floating>.form-select~label {
+    font-weight: bold;
+    color: rgb(255, 255, 255);
 }
