--- a/styles/main.css
+++ b/styles/main.css
@@ -7,14 +7,13 @@
 
 header {
   background-color: #111016;
-  /*   z-index: 10; */
   box-shadow: 4px 4px 7px 1px black;
 }
 
 .header__title {
   color: #ffffff;
   margin-right: 4rem;
-  font-size: 2.5rem;
+  font-size: 2vmax;
 }
 
 h1 {
