ajout fonction isCurrentUrl (police grasse sur lien en cours)

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -2,3 +2,7 @@ $purpleBackground: #111016;
 $purpleText: rgb(201, 173, 167);
 $purpleCard: rgb(54, 45, 59);
 $white: #ffffff;
+
+.active {
+  font-weight: bold;
+}
